--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "chart.js": "^2.9.4",
     "rxjs": "~6.6.0",
-    "sweetalert2": "^10.13.0",
+    "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
     "venobox": "^1.9.2",
     "zone.js": "~0.10.2"
